[package]
name = "core"
version = "0.1.0"
authors = ["gohck <gohck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
serde = "*"
serde_derive = "*"
serde_json = "*"
crypto-hash = "0.3.3"
primitive-types = { version= "0.7.2", features = ["serde"] } 
ed25519-dalek = "1.0.0"
rand = "0.7.3"
