[package]
name = "tests"
version = "0.1.0"
authors = ["gohck <gohck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
aes-gcm = "0.6.0"
rand = "0.7.3"

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.7.0" }
base64 = "0.12.3"
futures = "0.3.6"
async-trait = "0.1.41"

[lib]
path = "src/lib.rs"


[[test]]
# name = "cucumber_example"
# path = "src/cucumber_example.rs"
name = "cucumber_encode"
path = "src/cucumber_encode.rs"

harness = false             # Allows Cucumber to print output instead of libtest

