[package]
name = "hash888"
version = "0.1.0"
authors = ["gohck <gohck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_cbor = "0.10"
blake3 = "0.3.6"
rand = "0.7.3"
primitive-types = { version= "0.7.2", features = ["serde"] } 

[lib]
path = "src/lib.rs"
